=============
Release 0.9.7
=============

* reducing the number of templates for large number of channels, dynamically adapting cc_merge

=============
Release 0.9.6
=============

* fixes in the smart search (not all rare cases were covered in 0.9.5)
* fix a bug if multi file is activated with very small chunks
* speeding up the estimation of the templates: less snippets, closer to centroids
* speeding up the estimation of the amplitudes: less noise snippets
* speeding up isolation step during the smart search
* improving mixture removal with fine amplitudes
* removes sklearn from the dependencies
* restore max_test during clustering to decrease number of templates, handling shifts
* number of bins is adapted during the smart search as function of noise levels
* add the possibility to hide the status bars (for SpikeInterface logs)
* fix a rare bug in the clutering, introduced in 0.9.2 (delta set to inf)
* optimize the memory footprint while loading overlaps, faster for large arrays


=============
Release 0.9.5
=============

* speeding up the optimization of the amplitudes with MPI
* speeding up the processing of numpy datafiles (SpikeInterface)
* speeding up the smart search step (pre-generation of random numbers)
* speeding up the clustering step
* fix a bug while filtering in the preview mode introduced in 0.9.2
* speeding up the fitting step

=============
Release 0.9.2
=============

* speeding up the algorithm
* fixing a bug in the clustering while assigining labels
* better detection of noise snippets discarded during clustering
* cosmetic changes in the sanity plots (clusters)
* better handling of overlapping chunks while filtering, removing filtering artefacts
* templates are restricted within shanks
* optimization of the amplitudes once all templates have been found
* export of a purity value, for phy, to assess how good a cluster is (between 0 and 1)
* display the purity value in MATLAB