@@ -3,11 +3,11 @@ import os
 if 'DISPLAY' in os.environ and os.environ['DISPLAY'] in [":0", ":1", ":2"]:
     try:
         import PyQt5
-        matplotlib.use('Qt5Agg', warn=False)
+        matplotlib.use('Qt5Agg')
     except ImportError:
-        matplotlib.use('Qt4Agg', warn=False)
+        matplotlib.use('Qt4Agg')
 else:
-    matplotlib.use('Agg', warn=False)
+    matplotlib.use('Agg')
 
 # import circus.shared.files as files
 # import circus.shared.parser as parser
